Fixed the table's behavior on resize; it no longer wraps.
Should still do something for mobile -- maybe make text smaller.

Closes #129.

--- a/vis/src/sass/includes/vb.sass
+++ b/vis/src/sass/includes/vb.sass
@@ -221,22 +221,23 @@
 /* Tabular
  ------------------------------------------------------- */
 .vb-chart-table
-    min-width: 900px;
     overflow-x: scroll;
+    overflow-y: hidden;
 
 .tablerow
     height: 30px;
     cursor: pointer;
     padding-top: 4px;
     padding-bottom: 4px;
-    border-bottom: 1px solid #aaaaaa;
     line-height: 30px;
+    display: inline-block;
+    white-space: nowrap;
+
+    &.datarow
+        border-top: 1px solid #aaaaaa;
 
     &.atomic .expand-icon
         display: none;
-
-    &:last-child
-        border-bottom: 0;
 
     &.header:hover
         background-color: #ffffff;
@@ -248,6 +249,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         display: inline-block;
+        padding-right: .4em;
 
         &.long
             width: 250px;
